crates/wolf_sema/tests/snapshots/attr_diagnostics__e0817_misplaced.snap
---
source: crates/wolf_sema/tests/attr_diagnostics.rs
expression: "render_attrs(\"#[repr(c)]\\nfn f() -> int {\\n    1\\n}\\n\\n#[consttime]\\nstruct S {\\n    x: int,\\n}\\n\")"
---
error[E0817]: `repr` means nothing here — it applies to a struct
 --> mem:///main.lu:1:3
  |
1 | #[repr(c)]
  |   ^^^^^^^ nothing reads this attribute in this position
  |
  = note: `#[repr(c)]` lays a struct out at the C layout ([abi.layout.c]); on anything else it
    would be accepted and ignored, so it is refused instead.

error[E0817]: `consttime` means nothing here — it applies to a function
 --> mem:///main.lu:6:3
  |
6 | #[consttime]
  |   ^^^^^^^^^ nothing reads this attribute in this position
  |
  = note: an attribute in a place no pass reads would be accepted and ignored, so it is refused
    instead ([gram.item.attr]); move it to a function, or delete it.
