crates/wolf_sema/tests/snapshots/attr_diagnostics__e0817_noalloc.snap
---
source: crates/wolf_sema/tests/attr_diagnostics.rs
expression: "render_attrs(\"#[noalloc]\\nfn f() -> int {\\n    1\\n}\\n\")"
---
error[E0817]: `noalloc` is not implemented yet
 --> mem:///main.lu:1:3
  |
1 | #[noalloc]
  |   ^^^^^^^ known, but nothing implements it
  |
  = note: an attribute nothing implements would compile and mean nothing, so it is refused by name
    ([gram.item.attr], K13); the performance contracts (I15) have no checker yet
    (wolf-lang#180), and an unchecked promise is worse than none. The attributes this
    compiler implements: `trusted`, `consttime`, `allow`, `index`, `budget`, `repr(c)`,
    `repr(c, packed)`, `repr(c, align(N))` and `cfg(target = "…")`.
