crates/wolf_sema/tests/snapshots/attr_diagnostics__e0817_section_shapes.snap
---
source: crates/wolf_sema/tests/attr_diagnostics.rs
expression: "render_attrs(\"#[section(\\\".rodata.kw\\\")]\\nconst LIMIT: int = 5\\n\\n\\\n             #[section(\\\"a b\\\")]\\nvar v: int = 0\\n\\n\\\n             #[link_section(\\\".text.boot\\\")]\\nfn boot() -> int {\\n    1\\n}\\n\")"
---
error[E0817]: `section` means nothing on a `const` — a `const` is its value and has no storage to place
 --> mem:///main.lu:1:3
  |
1 | #[section(".rodata.kw")]
  |   ^^^^^^^^^^^^^^^^^^^^^ a `const` has no storage
  |
  = note: a `const` is its value at every read ([mem.static.1]); to place the value in a section,
    declare it a module `let`, or delete the attribute.

error[E0817]: `section` takes one section name: `#[section(".name")]`
 --> mem:///main.lu:4:3
  |
4 | #[section("a b")]
  |   ^^^^^^^^^^^^^^ not a section name
  |
  = note: a section name is one string of printable ASCII with no space, quote, comma or backslash
    ([abi.link.section]).

error[E0817]: `link_section` is not an attribute wolf knows — the spelling is `section`
 --> mem:///main.lu:7:3
  |
7 | #[link_section(".text.boot")]
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^ Rust's spelling
  |
  = note: section placement is `#[section(".name")]` ([abi.link.section], K6). `trusted`,
    `consttime`, `allow`, `index`, `budget`, `repr(c)`, `repr(c, packed)`, `repr(c,
    align(N))`, `section(".name")` and `cfg(target = "…")` are the attributes this compiler
    implements.
