crates/wolf_sema/tests/snapshots/attr_diagnostics__e0817_unknown.snap
---
source: crates/wolf_sema/tests/attr_diagnostics.rs
expression: "render_attrs(\"#[frobnicate(yes)]\\nfn main() -> int {\\n    0\\n}\\n\")"
---
error[E0817]: `frobnicate` is not an attribute wolf knows
 --> mem:///main.lu:1:3
  |
1 | #[frobnicate(yes)]
  |   ^^^^^^^^^^^^^^^ unknown attribute
  |
  = note: the attribute set is closed ([gram.item.attr]): `trusted`, `consttime`, `allow`,
    `index`, `budget`, `repr(c)`, `repr(c, packed)`, `repr(c, align(N))` and `cfg(target =
    "…")`. A name outside it is refused, never ignored.
