crates/wolf_sema/tests/snapshots/attr_diagnostics__e0821_extern_let_shapes.snap
---
source: crates/wolf_sema/tests/attr_diagnostics.rs
expression: "render(&res, &all)"
---
error[E0821]: an `extern "c" let` has no initializer — the link defines the symbol
 --> mem:///main.lu:1:25
  |
1 | extern "c" let A: *u8 = 0 as *u8
  |                         ^^^^^^^^ the linker supplies this
  |
  = note: `extern "c" let NAME: *T` names a symbol the link defines; its value is the symbol's
    address ([abi.link.extern]).

error[E0821]: a link-time symbol is declared with `extern "c" let`
 --> mem:///main.lu:3:12
  |
3 | extern "c" var B: *u8
  |            ^^^ only `let` names a link-time symbol
  |
  = note: `extern "c" let NAME: *T` names a symbol the link defines; its value is the symbol's
    address ([abi.link.extern]).

error[E0821]: `extern "c" let C` names a link-time symbol, so its type is a raw pointer — its value is the symbol's address
 --> mem:///main.lu:5:19
  |
5 | extern "c" let C: int
  |                   ^^^ not a raw pointer type
  |
  = note: write `extern "c" let NAME: *T` and read the value through the pointer inside `unsafe`
    ([abi.link.extern]).

error[E0821]: `extern "c" let` declares a module item — it cannot appear inside a body
 --> mem:///main.lu:8:5
  |
8 |     extern "c" let D: *u8
  |     ^^^^^^^^^^^^^^^^^^^^^ not at a module's top level
  |
  = note: `extern "c" let NAME: *T` names a symbol the link defines; its value is the symbol's
    address ([abi.link.extern]).
